force-app/main/default/objects/Design_Request__c/Design_Request__c.object-meta.xml
<CustomObject>
    <description>Design Requests integrate with Workfront Projects for the Design team via Adobe Workfront Fusion</description>
    <label>Design Request</label>
    <nameField>
        <displayFormat>DR-{00000}</displayFormat>
        <label>Design Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Design Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>