force-app/main/default/objects/Design_Request__c/fields/Account_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Account_Vertical__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Vertical_Grouping__c)</formula>
    <label>Account Vertical</label>
    <type>Text</type>
</CustomField>