force-app/main/default/objects/Design_Request__c/fields/Account_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>Account_Win_Rate__c</fullName>
    <label>Account Win Rate %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>