force-app/main/default/objects/Design_Request__c/fields/Account_Won__c.field-meta.xml
<CustomField>
    <fullName>Account_Won__c</fullName>
    <label>Account Won $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>