force-app/main/default/objects/Design_Request__c/fields/Annual_Opportunity_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Opportunity_Revenue__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Opportunity Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>