force-app/main/default/objects/Design_Request__c/fields/Basis_Weight__c.field-meta.xml
<CustomField>
    <fullName>Basis_Weight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a Basis Weight analysis needed?</description>
    <label>Basis Weight</label>
    <type>Checkbox</type>
</CustomField>