force-app/main/default/objects/Design_Request__c/fields/Basis_Weight_Notes__c.field-meta.xml
<CustomField>
    <fullName>Basis_Weight_Notes__c</fullName>
    <label>Basis Weight Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>