force-app/main/default/objects/Design_Request__c/fields/Custom_Design__c.field-meta.xml
<CustomField>
    <fullName>Custom_Design__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Complex requests, is Custom Design needed?</description>
    <label>Custom Design</label>
    <type>Checkbox</type>
</CustomField>