force-app/main/default/objects/Design_Request__c/fields/Customer_Selling_Margin_Rate__c.field-meta.xml
<CustomField>
    <fullName>Customer_Selling_Margin_Rate__c</fullName>
    <formula>Opportunity__r.Customer_Selling_Margin_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Selling Margin Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>