force-app/main/default/objects/Design_Request__c/fields/Delivery_Condition__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Condition__c</fullName>
    <description>For International Design Requests only</description>
    <label>Delivery Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unworked</fullName>
            </value>
            <value>
                <fullName>Assembled</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>