force-app/main/default/objects/Design_Request__c/fields/Delivery_Condition_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Condition_Explanation__c</fullName>
    <label>Delivery Condition Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>