force-app/main/default/objects/Design_Request__c/fields/Design_Intake_Turn_Time_No_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Design_Intake_Turn_Time_No_Weekends__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(Next_Status_Date_After_Design_Review__c)),
NOT(ISBLANK(Status_Date_Design_Review__c))
),

Next_Status_Date_After_Design_Review__c-Status_Date_Design_Review__c

-

/*Find the number of weekend days between the 2 dates*/

(FLOOR((DATEVALUE(Next_Status_Date_After_Design_Review__c)-DATEVALUE(Status_Date_Design_Review__c))/7)*2

+

IF(AND(WEEKDAY(DATEVALUE(Status_Date_Design_Review__c))=1,WEEKDAY(DATEVALUE(Next_Status_Date_After_Design_Review__c))&lt;&gt;7),1,

IF(CASE(WEEKDAY(DATEVALUE(Status_Date_Design_Review__c)),1,8,WEEKDAY(DATEVALUE(Status_Date_Design_Review__c)))&gt;CASE(WEEKDAY(DATEVALUE(Next_Status_Date_After_Design_Review__c)),1,8,WEEKDAY(DATEVALUE(Next_Status_Date_After_Design_Review__c))),2,

IF(OR(WEEKDAY(DATEVALUE(Next_Status_Date_After_Design_Review__c))=7,WEEKDAY(DATEVALUE(Status_Date_Design_Review__c))=1),1,

IF(OR(WEEKDAY(DATEVALUE(Next_Status_Date_After_Design_Review__c))=1,WEEKDAY(DATEVALUE(Status_Date_Design_Review__c))=7),2,

0)))))

+

IF(OR(WEEKDAY(DATEVALUE(Next_Status_Date_After_Design_Review__c))=1,WEEKDAY(DATEVALUE(Next_Status_Date_After_Design_Review__c))=7),DATETIMEVALUE(TEXT(DATEVALUE(Next_Status_Date_After_Design_Review__c))+&quot; 00:00:00&quot;)+1-Next_Status_Date_After_Design_Review__c,0)

+

IF(OR(WEEKDAY(DATEVALUE(Status_Date_Design_Review__c))=1,WEEKDAY(DATEVALUE(Status_Date_Design_Review__c))=7),Status_Date_Design_Review__c-DATETIMEVALUE(TEXT(DATEVALUE(Status_Date_Design_Review__c))+&quot; 00:00:00&quot;),0)

,
null
)</formula>
    <label>Design Intake Turn Time (No Weekends)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>