force-app/main/default/objects/Design_Request__c/fields/Design_Intake_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Design_Intake_Turnaround_Time__c</fullName>
    <formula>IF( NOT(ISBLANK(Status_Date_Design_Review__c)) ,
 IF( NOT(ISBLANK(Status_Date_Approved__c)) ,  Status_Date_Approved__c - Status_Date_Design_Review__c , 
  IF( NOT(ISBLANK(Status_Date_Plan__c)) ,  Status_Date_Plan__c - Status_Date_Design_Review__c , 
   IF( NOT(ISBLANK(Status_Date_Current__c)) , Status_Date_Current__c - Status_Date_Design_Review__c , 
    IF( NOT(ISBLANK(Status_Date_Returned__c)) , Status_Date_Returned__c - Status_Date_Design_Review__c , null )
   )
  )
 ) ,
 null
)</formula>
    <label>Design Intake Turnaround Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>