force-app/main/default/objects/Design_Request__c/fields/Design_Motivation__c.field-meta.xml
<CustomField>
    <fullName>Design_Motivation__c</fullName>
    <label>Design Motivation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sustainability​</fullName>
            </value>
            <value>
                <fullName>Operational Efficiency​</fullName>
            </value>
            <value>
                <fullName>Logistical Efficiency​</fullName>
            </value>
            <value>
                <fullName>Cost Reduction​</fullName>
            </value>
            <value>
                <fullName>User Experience​</fullName>
            </value>
            <value>
                <fullName>Brand Development​</fullName>
            </value>
            <value>
                <fullName>New Product​</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>