force-app/main/default/objects/Design_Request__c/fields/Design_Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Design_Request_Description__c</fullName>
    <label>Design Request Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>