force-app/main/default/objects/Design_Request__c/fields/Design_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Design_Turnaround_Time__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(Status_Date_Complete__c)),
NOT(ISBLANK(Status_Date_Design_Review__c))
) ,
Status_Date_Complete__c - Status_Date_Design_Review__c ,
null
)</formula>
    <label>Design Turnaround Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>