force-app/main/default/objects/Design_Request__c/fields/Discovery_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Meeting</label>
    <type>Checkbox</type>
</CustomField>