force-app/main/default/objects/Design_Request__c/fields/Drawing__c.field-meta.xml
<CustomField>
    <fullName>Drawing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Simple requests, if Drawings are needed</description>
    <label>Drawing</label>
    <type>Checkbox</type>
</CustomField>