force-app/main/default/objects/Design_Request__c/fields/Drawing_Details__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Details__c</fullName>
    <inlineHelpText>If you need to add drawing information, check the Drawings Box and describe the drawing in the “Drawing Details” using the below format.

Drawing Type – Material – Length x Width x Depth

Example 1 – RSC – 32 ECT C Kraft – 12” x 5” x 4”
Example 2 – Other – 5243 – 44 ECT B MW – 10” x 6” x 3.25”</inlineHelpText>
    <label>Drawing Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>