force-app/main/default/objects/Design_Request__c/fields/Estimated_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Volume__c</fullName>
    <formula>Opportunity__r.Estimated_Annual_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Annual Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>