force-app/main/default/objects/Design_Request__c/fields/Graphics__c.field-meta.xml
<CustomField>
    <fullName>Graphics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are graphics needed (Simple or Complex)?</description>
    <label>Graphics</label>
    <type>Checkbox</type>
</CustomField>