force-app/main/default/objects/Design_Request__c/fields/Graphics_Notes__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Notes__c</fullName>
    <label>Graphics Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>