force-app/main/default/objects/Design_Request__c/fields/Master_Workfront_Project__c.field-meta.xml
<CustomField>
    <fullName>Master_Workfront_Project__c</fullName>
    <label>Master Workfront Project #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>