force-app/main/default/objects/Design_Request__c/fields/Next_Status_Date_After_Design_Review__c.field-meta.xml
<CustomField>
    <fullName>Next_Status_Date_After_Design_Review__c</fullName>
    <formula>IF( NOT(ISBLANK(Status_Date_Design_Review__c)) ,
IF( NOT(ISBLANK(Status_Date_Approved__c)) , Status_Date_Approved__c,
IF( NOT(ISBLANK(Status_Date_Plan__c)) , Status_Date_Plan__c ,
IF( NOT(ISBLANK(Status_Date_Current__c)) , Status_Date_Current__c,
IF( NOT(ISBLANK(Status_Date_Returned__c)) , Status_Date_Returned__c, null )
)
)
) ,
null
)</formula>
    <label>Next Status Date After Design Review</label>
    <type>DateTime</type>
</CustomField>