force-app/main/default/objects/Design_Request__c/fields/Notes_from_Design__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_Design__c</fullName>
    <label>Notes from Design</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>