force-app/main/default/objects/Design_Request__c/fields/Other_Design_Motivation__c.field-meta.xml
<CustomField>
    <fullName>Other_Design_Motivation__c</fullName>
    <label>Other Design Motivation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>