force-app/main/default/objects/Design_Request__c/fields/Other_Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Other_Shipping_Carrier__c</fullName>
    <label>Other Shipping Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>