force-app/main/default/objects/Design_Request__c/fields/Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>Progress_Status__c</fullName>
    <label>Progress Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Time</fullName>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
            <value>
                <fullName>Behind</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>