force-app/main/default/objects/Design_Request__c/fields/Project_Drawings_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Drawings_Link__c</fullName>
    <formula>HYPERLINK(Opportunity__r.Project_Drawings_Link__c, Opportunity__r.Project_Drawings_Link__c )</formula>
    <label>Project Drawings Link</label>
    <type>Text</type>
</CustomField>