force-app/main/default/objects/Design_Request__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <inlineHelpText>Design Project Manager</inlineHelpText>
    <label>Project Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>