force-app/main/default/objects/Design_Request__c/fields/Region_for_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Region_for_Delivery__c</fullName>
    <description>For International Design Requests only</description>
    <inlineHelpText>Please be specific as possible. Format should be Region, name of ODM or CM if known.</inlineHelpText>
    <label>Region for Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>