force-app/main/default/objects/Design_Request__c/fields/Region_for_Manufacturing__c.field-meta.xml
<CustomField>
    <fullName>Region_for_Manufacturing__c</fullName>
    <description>For International Design Requests only</description>
    <inlineHelpText>Please be specific as possible. Format should be &quot;City, Country&quot; and Manufacturer if known</inlineHelpText>
    <label>Region for Manufacturing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>