force-app/main/default/objects/Design_Request__c/fields/Requested_Design_Execution_Region__c.field-meta.xml
<CustomField>
    <fullName>Requested_Design_Execution_Region__c</fullName>
    <label>Requested Design Execution Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>