force-app/main/default/objects/Design_Request__c/fields/Return_Request__c.field-meta.xml
<CustomField>
    <fullName>Return_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Request</label>
    <type>Checkbox</type>
</CustomField>