force-app/main/default/objects/Design_Request__c/fields/Returned_Reason__c.field-meta.xml
<CustomField>
    <fullName>Returned_Reason__c</fullName>
    <label>Returned Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>