force-app/main/default/objects/Design_Request__c/fields/Sales_Rep_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Mobile_Number__c</fullName>
    <formula>Opportunity__r.Owner_Phone_Number__c</formula>
    <label>Sales Rep Mobile Number</label>
    <type>Text</type>
</CustomField>