force-app/main/default/objects/Design_Request__c/fields/Sample__c.field-meta.xml
<CustomField>
    <fullName>Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a Sample needed?</description>
    <label>Sample</label>
    <type>Checkbox</type>
</CustomField>