force-app/main/default/objects/Design_Request__c/fields/Sample_Attention_To__c.field-meta.xml
<CustomField>
    <fullName>Sample_Attention_To__c</fullName>
    <label>Sample Attention To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>