force-app/main/default/objects/Design_Request__c/fields/Sample_City__c.field-meta.xml
<CustomField>
    <fullName>Sample_City__c</fullName>
    <label>Sample City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>