force-app/main/default/objects/Design_Request__c/fields/Sample_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Sample_Company_Name__c</fullName>
    <label>Sample Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>