force-app/main/default/objects/Design_Request__c/fields/Sample_Country__c.field-meta.xml
<CustomField>
    <fullName>Sample_Country__c</fullName>
    <label>Sample Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>