force-app/main/default/objects/Design_Request__c/fields/Sample_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Sample_Delivery__c</fullName>
    <label>Sample Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipping - Ground</fullName>
            </value>
            <value>
                <fullName>Shipping - Express</fullName>
            </value>
            <value>
                <fullName>Design Center Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>