force-app/main/default/objects/Design_Request__c/fields/Sample_Destination__c.field-meta.xml
<CustomField>
    <fullName>Sample_Destination__c</fullName>
    <label>Sample Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ship To</fullName>
            </value>
            <value>
                <fullName>Manual Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>