force-app/main/default/objects/Design_Request__c/fields/Sample_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Sample_Quantity__c</fullName>
    <label>Sample Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>