force-app/main/default/objects/Design_Request__c/fields/Sample_State__c.field-meta.xml
<CustomField>
    <fullName>Sample_State__c</fullName>
    <label>Sample State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>