force-app/main/default/objects/Design_Request__c/fields/Sample_Street__c.field-meta.xml
<CustomField>
    <fullName>Sample_Street__c</fullName>
    <label>Sample Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>