force-app/main/default/objects/Design_Request__c/fields/Sample_Zip__c.field-meta.xml
<CustomField>
    <fullName>Sample_Zip__c</fullName>
    <label>Sample Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>