force-app/main/default/objects/Design_Request__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Ship_To__c</referenceTo>
    <relationshipLabel>Design Requests</relationshipLabel>
    <relationshipName>Design_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>