force-app/main/default/objects/Design_Request__c/fields/Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account__c</fullName>
    <label>Shipping Account #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>