force-app/main/default/objects/Design_Request__c/fields/Shipping_Account_Bill_To_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account_Bill_To_Zip_Code__c</fullName>
    <inlineHelpText>For UPS Only - Zip Code for Bill To of UPS Account</inlineHelpText>
    <label>Shipping Account Bill To Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>