force-app/main/default/objects/Design_Request__c/fields/Show_in_List_View__c.field-meta.xml
<CustomField>
    <fullName>Show_in_List_View__c</fullName>
    <formula>OR( 
 CreatedById = $User.Id,
 Opportunity_Owner__c = $User.Id,
 Specialist__c = $User.Id,
 Specialist_Manager__c = $User.Id
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show in List View</label>
    <type>Checkbox</type>
</CustomField>