force-app/main/default/objects/Design_Request__c/fields/Spec_Work__c.field-meta.xml
<CustomField>
    <fullName>Spec_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spec Work</label>
    <type>Checkbox</type>
</CustomField>