force-app/main/default/objects/Design_Request__c/fields/Spec_Work_Description__c.field-meta.xml
<CustomField>
    <fullName>Spec_Work_Description__c</fullName>
    <label>Spec Work Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>