force-app/main/default/objects/Design_Request__c/fields/Spec_Work_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Spec_Work_Item_Quantity__c</fullName>
    <label>Spec Work Item Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>