force-app/main/default/objects/Design_Request__c/fields/Spec_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Spec_Work_Type__c</fullName>
    <label>Spec Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drawing</fullName>
            </value>
            <value>
                <fullName>Physical Sample</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>