force-app/main/default/objects/Design_Request__c/fields/Specialist__c.field-meta.xml
<CustomField>
    <fullName>Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specialist</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must select a Corrugated Sales Specialist</errorMessage>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Specialist - Design Corrugated Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Design_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>