force-app/main/default/objects/Design_Request__c/fields/Specialist_Manager__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Manager__c</fullName>
    <formula>Specialist__r.ManagerId</formula>
    <label>Specialist Manager</label>
    <type>Text</type>
</CustomField>