force-app/main/default/objects/Design_Request__c/fields/Specialist_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Manager_Name__c</fullName>
    <formula>Specialist__r.Manager.FirstName &amp; &quot; &quot; &amp; Specialist__r.Manager.LastName</formula>
    <label>Specialist Manager Name</label>
    <type>Text</type>
</CustomField>