force-app/main/default/objects/Design_Request__c/fields/Specialist_Name__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Name__c</fullName>
    <formula>Specialist__r.FirstName &amp; &quot; &quot; &amp;  Specialist__r.LastName</formula>
    <label>Specialist Name</label>
    <type>Text</type>
</CustomField>