force-app/main/default/objects/Design_Request__c/fields/Specialist_Notes_for_Design__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Notes_for_Design__c</fullName>
    <label>Specialist Notes for Design</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>