force-app/main/default/objects/Design_Request__c/fields/Specialist_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Turnaround_Time__c</fullName>
    <formula>IF( 
 AND (
  NOT(ISBLANK(Specialist__c)) ,
  NOT(ISBLANK(Status_Date_Design_Review__c))
 ),  
 Status_Date_Design_Review__c - CreatedDate ,
 null
)</formula>
    <label>Specialist Turnaround Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>